@@ -21,5 +21,6 @@
   <category label="30200">   
 		<setting id="showinfomsg" type="bool" label="30202" default="false" />
 		<setting id="add_rec_episode_info" type="bool" label="30203" default="true" />
+		<setting id="group_recordings_by_series" type="bool" label="30204" default="true" />
 </category>
 </settings>
